# youtube-analytics

./: .gitignore  README.md  pyproject.toml
data/own/hauntingminutes/: metadata.json  stories.txt  videos.txt
data/own/munnitales/: metadata.json  prompts.txt  stories.txt  styling.md  videos.txt
data/own/telugusampada/: all_videos_stats.md  channel_analytics.json  channel_info.json  channel_snapshot.md  content_strategy_brief.md  longform_analysis.md  metadata.json  videos.txt
scripts/: export_reports.py
src/youtube_analytics/: __init__.py  __main__.py  analyzer.py  auth.py  cli.py  enricher.py  exporter.py  fetcher.py  fetcher_competitor.py  fetcher_own.py  fetcher_transcript.py  models.py  retry.py  storage.py  utils.py
src/youtube_analytics/tests/: __init__.py  test_youtube_analytics.py
